samples/_failures_safe/1761005247_8a8445_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ee909db.c: In function ‘main’:
./samples/SAFE/__tmp_8ee909db.c:170:16: error: missing terminating " character
  170 |         printf("  %s: '%
      |                ^~~~~~~~~
./samples/SAFE/__tmp_8ee909db.c:170:9: error: expected expression at end of input
  170 |         printf("  %s: '%
      |         ^~~~~~
./samples/SAFE/__tmp_8ee909db.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8ee909db.c:170:9: error: expected declaration or statement at end of input
